syntax = "proto3";

option csharp_namespace = "OnlineShop.Product.Grpc";

package product;

service Product {
  rpc GetProducts (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  repeated int32 orderIds = 1;
}

message ProductResponse {
  repeated ProductDetail products = 1;
}

message ProductDetail {
  int32 id = 1;
  int32 orderId = 2;
  string definition = 3;
}